compiler/tests-spec/testData/diagnostics/linked/expressions/constant-literals/integer-literals/hexadecimal-integer-literals/p-1/neg/2.1.fir.kt
// TESTCASE NUMBER: 1
val value_1 = 0x_1234567890

// TESTCASE NUMBER: 2
val value_2 = 0X_______23456789

// TESTCASE NUMBER: 3
val value_3 = 0X_2_3_4_5_6_7_8_9

// TESTCASE NUMBER: 4
val value_4 = <!ILLEGAL_CONST_EXPRESSION!>0x_<!>
